--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "body-parser": "^1.20.3",
         "cors": "^2.8.5",
         "express": "^4.21.1",
-        "mongodb": "^3.6.3"
+        "fs": "^0.0.1-security",
+        "mongodb": "^3.6.3",
+        "path": "^0.12.7"
     }
 }
